# stargate

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CODEOWNERS  Containerfile  Containerfile.combined  Containerfile.frontend  Containerfile.scanner  Makefile  README.md  TODO.md  alembic.ini  celery_app.py  podman-compose.local.yml  podman-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
summit-demo-factory/: .containerignore  Containerfile  Containerfile.test  DEPLOYMENT.md  Makefile  README.md  podman-compose.yml  pyproject.toml
summit-demo-factory/agnosticd-config/: default_vars.yml  destroy_env.yml  post_software.yml  pre_software.yml  sample_vars.yml  software.yml
summit-demo-factory/agnosticv-catalog/: common.yaml  dev.yaml  prod.yaml
summit-demo-factory/api/app/: database.py  main.py  models.py  repository.py  rubric_evaluator.py  rubric_loader.py  schema_validator.py
summit-demo-factory/api/migrations/: 001_initial_schema.sql
summit-demo-factory/cli/: run_report.py  sdf.py
summit-demo-factory/collectors/babylon/: collect_anarchy_state.py
summit-demo-factory/docs/: integration-findings.md  stargate-production-plan.md
summit-demo-factory/evidence-schemas/: evidence.schema.json  remediation.schema.json  run.schema.json  stage.schema.json
summit-demo-factory/remediations/: catalog.yaml
summit-demo-factory/reports/: build_report.py
summit-demo-factory/tests/: conftest.py  test_ai_boundaries.py  test_anarchy_provision.py  test_api.py  test_build_report.py  test_build_rubrics.py  test_cli.py  test_cluster_health.py  test_collectors.py  test_db.py  test_demo_definitions.py  test_e2e_integration.py  test_e2e_simulated.py  test_json_schema_contracts.py  test_provision_watcher.py  test_rubric_evaluator.py  test_rubric_loader.py  test_schemas.py  test_showroom_health.py  test_tekton.py  test_vm_model_lanes.py
(+578 files in other folders)
